--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mongoose": "^5.7.10"
